Fix locomon-related findbugs issues