@@ -167,7 +167,7 @@ public class Llnmon {
             return Bundle.getMessage("LN_MSG_LOCOIO_HELPER_FIRMWARE_REV_DOTTED_ONE_DIGIT", val);
         } else if ((val >= 10) && (val < 100)) {
             return Bundle.getMessage("LN_MSG_LOCOIO_HELPER_FIRMWARE_REV_DOTTED_TWO_DIGITS",
-                    new Integer(val/10), val%10);   // the integer is boxed in order to prevent display as a floating point value
+                    Integer.valueOf(val/10), val%10);   // the integer is boxed in order to prevent display as a floating point value
         } else if ((val >= 100) && (val < 1000)) {
             int hundreds = val/100;
             int tens = (val - (hundreds * 100)) / 10;
